--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Moview : Moview">
+    <meta name="description" content="ProActive : ProActive">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Moview</title>
+    <title>ProActive</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/irfananda00/Moview">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/irfananda00/ProActive">View on GitHub</a>
 
-          <h1 id="project_title">Moview</h1>
-          <h2 id="project_tagline">Moview</h2>
+          <h1 id="project_title">ProActive</h1>
+          <h2 id="project_tagline">ProActive</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/irfananda00/Moview/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/irfananda00/Moview/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/irfananda00/ProActive/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/irfananda00/ProActive/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -55,7 +55,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Moview maintained by <a href="https://github.com/irfananda00">irfananda00</a></p>
+        <p class="copyright">ProActive maintained by <a href="https://github.com/irfananda00">irfananda00</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
